--- a/main.html
+++ b/main.html
@@ -8,30 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Why I want to become a developer?"</h1>
-	<p>Becoming a developer can be driven by various motivations depending on personal aspirations, interests, and career goals. Here are some common reasons why someone might want to become a developer:
-
-1. Passion for Technology : A genuine interest in how technology works and the desire to be part of creating the tools and systems that shape the future.
-
-2.  Problem-Solving : Developers often enjoy the process of solving complex problems. Programming requires logical thinking, creativity, and innovation, which can be very satisfying.
-
-3.  Job Opportunities and Demand : The tech industry is one of the fastest-growing sectors globally. Software development roles are in high demand, providing a wealth of job opportunities and career stability.
-
-4.  Creativity and Innovation : Development allows you to turn ideas into reality. Whether it's creating an app, game, website, or AI system, programming is a highly creative field where you can build something new and impactful.
-
-5.  Continuous Learning and Growth : Technology evolves rapidly, and developers have the opportunity to continuously learn new languages, frameworks, and tools, keeping the work fresh and exciting.
-
-6.  High Earning Potential : Software development is one of the higher-paying professions, especially with experience and expertise in popular programming languages or specialized areas like machine learning or cloud computing.
-
-7.  Impact : Developers have the power to create products or systems that can positively impact society, whether through educational tools, healthcare solutions, or innovations in communication and entertainment.
-
-8.  Flexibility and Remote Work : Many developer roles offer flexibility in terms of working hours and the option to work remotely, making it an appealing career choice for those seeking work-life balance.
-
-9.  Collaboration and Community : Developers often work with like-minded individuals, collaborating on projects, sharing knowledge, and growing within the programming community.
-
-10.  Building a Career in a Growing Field : The tech industry is constantly evolving, offering a wide range of specializations that developers can explore, such as web development, mobile apps, AI, machine learning, and cybersecurity.
-
-	</p>
+	<h1>Why I want to become a developer?</h1>
+	<p>Becoming a developer can be driven by various motivations depending on personal aspirations, interests, and career goals. </p>
     <script type="text/javascript" src="./script.js">
 </script>
 
